# grok-eliminator

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: DOCUMENTATION_MAP.md  OPEN_SOURCE_CHECKLIST.md  design.md
scripts/: install-release.ps1  install-release.sh  install.sh
src/: lib.rs  main.rs
tests/: report_contract.rs
