[package]
name = "grok-eliminator"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Audit and remove local Grok CLI artifacts without exposing credential values"
license = "MIT"
readme = "README.md"
repository = "https://github.com/TAKAMAgents/grok-eliminator"
keywords = ["grok", "xai", "cli", "cleanup", "credentials"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
